<resources>
    <string name="app_name">Class Directory App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="registerpassword">Password</string>
    <string name="registerconfirm_password">Confirm Password</string>
    <string name="registerregister">Register</string>
    <string name="forgetpasswordemail">Email</string>
    <string name="send_password">Send Password</string>
    <string name="class_student_list">Class Student List</string>
</resources>